# procurement-copilot

./: .gitignore  .pre-commit-config.yaml  .railway-ignore  API_INTEGRATION_SUMMARY.md  APOLLO_INTEGRATION_SETUP.md  APOLLO_WORKING_STATUS.md  CLIENT_MATCHING_GUIDE.md  COMPLETE_SETUP_GUIDE.md  COMPLETE_SYSTEM_READY.md  CUSTOMER_ACQUISITION.md  CUSTOMER_ACQUISITION_SETUP.md  CUSTOMER_TESTING_GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DUAL_EMAIL_SYSTEM_STATUS.md  Dockerfile  FINAL_COMPLETE_SYSTEM.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_TEST.py  FRONTEND_DEPLOY.md  GO_LIVE_CHECKLIST.md  GROWTH.md  IMPROVEMENTS_IMPLEMENTED.md  LIVE_APP_DEPLOYMENT_GUIDE.md  Makefile  PERSONALIZATION_GUIDE.md  PLATFORM_INTEGRATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PRODUCTION_SETUP.md  Procfile  README.md  RUNBOOK.md  SEO_SETUP_COMPLETE_GUIDE.md  TED_ONLY_CONFIGURATION_SUMMARY.md  TENDERPULSE_MVP_SUMMARY.md  TENDERPULSE_REBRAND_SUMMARY.md  advanced_ted_prospect_finder.py  app.py  app_broken.py  (+88 more)
.github/workflows/: ci.yml
backend/: Dockerfile  massive_seo_tenders.json  run_migration.py  test_db_setup.py
backend/app/: __init__.py  alembic.ini  cli.py  main.py
backend/app/api/v1/: api.py
backend/app/cli/: outbound.py
backend/app/core/: config.py  constants.py  logging.py  metrics.py  security.py
backend/app/db/: base.py  crud.py  models.py  models_outbound.py  schemas.py  session.py
backend/app/migrations/: env.py
backend/app/outbound/: discovery.py  enrich.py  mailer.py  pipeline.py  utils.py
backend/app/scrapers/: base.py  boamp_fr.py  common.py  enhanced_ted.py  european_platforms.py  real_data.py  registry.py  ted.py  ted_connector.py
backend/app/services/: alerts.py  company_resolution.py  cpv.py  dedupe.py  email.py  ingest.py  intelligence.py  outreach.py  outreach_engine.py  outreach_templates.py  publish_controller.py  quality.py
backend/app/tasks/: jobs.py  scheduler.py  worker.py
backend/app/tests/: __init__.py  conftest.py  test_alerts.py  test_api.py  test_crud.py  test_outreach.py  test_scrapers.py  test_services.py
frontend/: Dockerfile  README.md  env.example  env.prod.example  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/components/: CreateFilterModal.tsx  Footer.tsx  StructuredData.tsx
frontend/src/lib/: api.ts  seo-quality.ts  utils.ts
infra/: Dockerfile  docker-compose.yml  env.example  init-db.sql  railway.json  render.yaml
infra/promtail/: config.yml
scripts/: backup.sh  demo_screenshots.sh  seed.py  uptime.http
templates/: 404.html  500.html  analytics.html  base.html  campaigns.html  dashboard.html  emails.html  login.html  matching.html  profile.html  prospects.html  settings.html  tender_details.html
(+39 files in other folders)
